--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Gcam Services Provider</string>
+    <string name="app_name">Fake Speech Services</string>
 </resources>
